[BUG_FIX] fix not to overflow at profile comment

--- a/app/assets/stylesheets/mypage.css.scss
+++ b/app/assets/stylesheets/mypage.css.scss
@@ -64,6 +64,11 @@
     }
   }
 
+  span {
+    margin: 0px 5px;
+    word-wrap: break-word;
+  }
+
   hr {
     width: 245px;
     clear: left;
